# embedded-systems

./: .gitignore  CMakeLists.txt  README.md  accelerometer.c  accelerometer.h  cgi.c  cgi.h  diodes.c  diodes.h  distancesensor.c  distancesensor.h  htmldata.c  irsensor.c  irsensor.h  lcd.c  lcd.h  lightsensor.c  lightsensor.h  main.c  motor.c  motor.h  servo.c  servo.h  speaker.c  speaker.h  ssi.c  ssi.h
html_files/: index.shtml
misc/: misra-report.txt  misra-report1.txt  misra-report2.txt  runmisra.sh  runmisra1.sh  runmisra2.sh
misc/vscode-config/: c_cpp_properties.json  launch-remote.json  launch.json  settings.json  tasks.json
